add list histories
